--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            color: #172d13; /* Dark green text */
+            color: #172d13;
             text-align: center;
             padding-top: 10vh;
             margin: 0;
