--- a/personality-test.html
+++ b/personality-test.html
@@ -150,6 +150,7 @@
         <a href="whyprogrammingmain.html" >why programming?</a>
         <a href="cards.html" >paths</a>
         <a href="formpagemain.html" >what area?</a>
+        <a href="table.html" >Comparison</a>
         <a href="moremain.html" >more</a>
         
 
