--- a/formpagemain.html
+++ b/formpagemain.html
@@ -147,6 +147,7 @@
         <a href="whyprogrammingmain.html" >why programming?</a>
         <a href="cards.html" >paths</a>
         <a href="personality-test.html" >personality type</a>
+        <a href="table.html" >Comparison</a>
         <a href="moremain.html" >more</a>
        
         
