--- a/table.html
+++ b/table.html
@@ -100,6 +100,7 @@
         <a href="index.html" >Home</a>
         <a href="whyprogrammingmain.html" >why programming?</a>
         <a href="cards.html" >paths</a>
+        <a href="formpagemain.html" >what area?</a>
         <a href="personality-test.html" >personality type</a>
         <a href="moremain.html" >more</a>
        
