--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background-picture"></div>
     <div class="container">
-        <h1>Are you trying to find your path in programming?</h1>
+        <h1>Are you trying to find your Path in programming?</h1>
         <button class="button" onclick="window.location.href='formpagemain.html'"><span>Yes, help me find my path</span></button>
     </div>
     
