--- a/formpagemain.html
+++ b/formpagemain.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Interactive Form</title>
-<link rel="stylesheet" href="/css/formpagemainstyle.css">
-<script src="/js/formpagemainscript.js"></script>
+<link rel="stylesheet" href="css/formpagemainstyle.css">
+<script src="js/formpagemainscript.js"></script>
 
 </head>
 
