CSS styles enhanced

--- a/formpagemain.html
+++ b/formpagemain.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interactive Form</title>
+<title>Formpage</title>
 <link rel="stylesheet" href="css/formpagemainstyle.css">
 <script src="js/formpagemainscript.js"></script>
 
@@ -38,7 +38,7 @@
           </select>
         </div>
         <div class="form-group" id="question2Group" style="display: none;">
-          <label for="question2">what programming language do you like better?</label>
+          <label for="question2">What programming language do you like better?</label>
           <select id="question2" onchange="handleQuestionChange(2)">
             <option value="">Select an option</option>
             <option value="JavaScript">JavaScript</option>
