--- a/whyprogrammingmain.html
+++ b/whyprogrammingmain.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Page</title>
+<title>Why programming?</title>
 <link rel="stylesheet" href="css/whyprogrammingmainstyle.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
   
   
   <div class="about-info">
-    <h2>why programming?</h2>
+    <h2>Why programming?</h2>
     <p>High Demand and Job Security: The demand for skilled programmers is consistently high. Nearly every industry requires programmers to create and maintain their digital infrastructure, leading to job security and numerous career opportunities.
 
       Creativity and Problem-Solving: Programming is not just about writing code; it’s about solving problems and creating solutions. It allows you to apply creative thinking to design applications and systems that can have a real-world impact.
